# MapNavigation

./: CMakeLists.txt  Readme.md  main.cpp  package-lock.json
backend/: CMakeLists.txt  main.cpp
backend/src/: OsmParser.cpp  OsmParser.h  PathFinder.cpp  PathFinder.h
data/: map.osm
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: mapView.vue
mapnavigation/: README.md  package-lock.json  package.json
src/: OsmParser.cpp  OsmParser.h  PathFinder.cpp  PathFinder.h
